[gd_scene load_steps=7 format=3 uid="uid://ctwaf51ulv563"]

[ext_resource type="Texture2D" uid="uid://361axe6upcnf" path="res://muncher/Muncher_placeholder.png" id="1_mg5s2"]
[ext_resource type="Script" path="res://scripts/tile_movement.gd" id="1_thj5s"]
[ext_resource type="Script" path="res://muncher/player_input_manager.gd" id="3_e0oyb"]
[ext_resource type="Script" path="res://muncher/death_manager.gd" id="4_od8cs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_30p6o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_mg5s2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8m6ok"]
size = Vector2(8, 8)

[node name="Muncher" type="Node2D"]
script = ExtResource("1_thj5s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_30p6o")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8m6ok")

[node name="InputManager" type="Node" parent="."]
script = ExtResource("3_e0oyb")

[node name="DeathManager" type="Node" parent="."]
script = ExtResource("4_od8cs")

[connection signal="area_entered" from="Area2D" to="DeathManager" method="_on_area_entered"]
[connection signal="requested_direction_changed" from="InputManager" to="." method="update_requested_direction"]
