[gd_scene load_steps=2 format=3 uid="uid://bqu14d7qakmer"]

[ext_resource type="Script" path="res://muncher/player_input_manager.gd" id="1_kigb8"]

[node name="PlayerInputManager" type="Node"]
script = ExtResource("1_kigb8")

[node name="InputBufferTimeout" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="InputBufferTimeout" to="." method="_on_input_buffer_timeout"]
